// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root Loader-root-1 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root Loader-root-7 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root Loader-root-4 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary Loader-linear-6 MuiLinearProgress-indeterminate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          style={
            Object {
              "visibility": undefined,
            }
          }
        >
          <nav
            className="MuiList-root SideMenu-root-11 Component-flexed-10 MuiList-padding"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-12"
            />
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-13 MuiListItem-gutters SideMenu-listItemGutters-14 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-16"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-15 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Dashboard
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-13 MuiListItem-gutters SideMenu-listItemGutters-14 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-16"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-15 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Employees
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-13 MuiListItem-gutters SideMenu-listItemGutters-14 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-16"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-15 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          style={
            Object {
              "visibility": undefined,
            }
          }
        >
          <nav
            className="MuiList-root SideMenu-root-31 Component-flexed-30 MuiList-padding"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-32"
            />
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-activeItem-39 MuiListItem-gutters SideMenu-listItemGutters-34 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-36 SideMenu-listItemHidden-37"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-35 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Dashboard
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-33 MuiListItem-gutters SideMenu-listItemGutters-34 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-36 SideMenu-listItemHidden-37"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-35 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Employees
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-33 MuiListItem-gutters SideMenu-listItemGutters-34 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-36 SideMenu-listItemHidden-37"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-35 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Theme
                </span>
              </div>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          style={
            Object {
              "visibility": undefined,
            }
          }
        >
          <nav
            className="MuiList-root SideMenu-root-21 Component-flexed-20 MuiList-padding"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-22"
            />
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-activeItem-29 MuiListItem-gutters SideMenu-listItemGutters-24 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-26"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-25 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Dashboard
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-23 MuiListItem-gutters SideMenu-listItemGutters-24 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-26"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-25 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Employees
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-23 MuiListItem-gutters SideMenu-listItemGutters-24 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-26"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-25 MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-81 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-82 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-83 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-115 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-116 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-117 Component-content-112 MuiGrid-container MuiGrid-item"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-88 Widget-featured-94 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-89 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-90 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-105 MuiPaper-elevation2"
        >
          <div
            className="MuiGrid-root Widget-container-106 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-107 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-98 Widget-border-101 Widget-border-top-102 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-99 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-100 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-98 Widget-border-101 Widget-border-bottom-103 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-99 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-100 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-98 Widget-border-101 Component-customTopBorder-96 Widget-border-top-102 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-99 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-100 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-98 Widget-border-101 Component-customBotomBorder-97 Widget-border-bottom-103 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-99 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-100 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-40 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-41 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-42 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-74 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-75 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-76 Component-content-71 MuiGrid-container MuiGrid-item"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-47 Widget-featured-53 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-48 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-49 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-64 MuiPaper-elevation2"
        >
          <div
            className="MuiGrid-root Widget-container-65 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-66 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-57 Widget-border-60 Widget-border-top-61 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-58 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-59 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-57 Widget-border-60 Widget-border-bottom-62 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-58 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-59 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-57 Widget-border-60 Component-customTopBorder-55 Widget-border-top-61 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-58 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-59 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-57 Widget-border-60 Component-customBotomBorder-56 Widget-border-bottom-62 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-58 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-59 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
